--- a/about-us.html
+++ b/about-us.html
@@ -69,7 +69,7 @@
                             <a href="/bookings.html">Book now @ just ₹1099*</a>
                         </div>
                         <div class="tnc-link">
-                            <span>*</span><a href="/Moonlit Tarot Terms of Service.pdf" target="_blank">read terms and conditions</a>
+                            <span>*</span><a href="/Moonlit Tarot Terms of Service (1).pdf" target="_blank">read terms and conditions</a>
                         </div>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="/bookings.html">Contact Us</a></li>
-                        <li><a href="/Moonlit Tarot Terms of Service.pdf" target="_blank">Terms of Service</a></li>
+                        <li><a href="/Moonlit Tarot Terms of Service (1).pdf" target="_blank">Terms of Service</a></li>
                     </ul>
                 </div>
         
@@ -177,7 +177,7 @@
                             <a href="/bookings.html">Book now @ just ₹1099*</a>
                         </div>
                         <div class="tnc-link">
-                            <span>*</span><a href="/Moonlit Tarot Terms of Service.pdf" target="_blank">read terms and conditions</a>
+                            <span>*</span><a href="Moonlit Tarot Terms of Service (1).pdf" target="_blank">read terms and conditions</a>
                         </div>
                     </div>
                 </div>
