--- a/bookings.html
+++ b/bookings.html
@@ -339,7 +339,7 @@
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/about-us.html">About</a></li>
                         <li><a href="#">Contact Us</a></li>
-                        <li><a href="/Moonlit Tarot Terms of Service.pdf" target="_blank">Terms of Service</a></li>
+                        <li><a href="/Moonlit Tarot Terms of Service (1).pdf" target="_blank">Terms of Service</a></li>
                     </ul>
                 </div>
         
