--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <a href="/bookings.html">Book now @ just ₹1099*</a>
                 </div>
                 <div class="tnc-link">
-                    <span>*</span><a href="/Moonlit Tarot Terms of Service.pdf" target="_blank">read terms and conditions</a>
+                    <span>*</span><a href="/Moonlit Tarot Terms of Service (1).pdf" target="_blank">read terms and conditions</a>
                 </div>
             </div>
         </div>
@@ -189,7 +189,7 @@
                         <li><a href="/index.html">Home</a></li>
                         <li><a href="/about-us.html" target="_blank">About</a></li>
                         <li><a href="/bookings.html" target="_blank">Contact Us</a></li>
-                        <li><a href="/Moonlit Tarot Terms of Service.pdf" target="_blank">Terms of Service</a></li>
+                        <li><a href="/Moonlit Tarot Terms of Service (1).pdf" target="_blank">Terms of Service</a></li>
                     </ul>
                 </div>
         
@@ -201,7 +201,7 @@
                             <a href="/bookings.html">Book now @ just ₹1099*</a>
                         </div>
                         <div class="tnc-link">
-                            <span>*</span><a href="/Moonlit Tarot Terms of Service.pdf" target="_blank">read terms and conditions</a>
+                            <span>*</span><a href="/Moonlit Tarot Terms of Service (1).pdf" target="_blank">read terms and conditions</a>
                         </div>
                     </div>
                 </div>
