--- a/bookings.html
+++ b/bookings.html
@@ -310,9 +310,8 @@
                     <select id="category" name="Category" required>
                         <!-- Add your options here -->
                         <option value="" disabled selected style="font-family: 'Roboto';">Select a category</option>
-                        <option value="consultation">Live Tarot Card Reading</option>
+                        <option value="consultation">Personalised Live Tarot Card Reading</option>
                         <option value="support">Support</option>
-                        <option value="feedback">Feedback</option>
                     </select>
                 </div>
                 <div class="form-group">
