--- a/bookings.html
+++ b/bookings.html
@@ -310,7 +310,7 @@
                     <select id="category" name="Category" required>
                         <!-- Add your options here -->
                         <option value="" disabled selected style="font-family: 'Roboto';">Select a category</option>
-                        <option value="consultation">Personalised Live Tarot Card Reading</option>
+                        <option value="consultation">30 min of Personalised Live Tarot Card Reading</option>
                         <option value="support">Support</option>
                     </select>
                 </div>
