--- a/bookings.html
+++ b/bookings.html
@@ -315,7 +315,7 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="submit-btn">Book Meeting</button>
+                    <button type="submit" class="submit-btn">Book Session</button>
                     <div id="spinner" class="spinner"></div>
                 </div>
             </form>
